--- a/app/views/hr-main.html
+++ b/app/views/hr-main.html
@@ -22,7 +22,7 @@
           <a href="#">Add new sales employee</a>
         </li>
         <li>
-          <a href="#">Generate employee report</a>
+          <a href="/hr/generate-report">Generate employee report</a>
         </li>
       </ul>
     </div>
