added functionality for use case 1

--- a/app/views/hr-main.html
+++ b/app/views/hr-main.html
@@ -16,10 +16,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="#">Add new employee</a>
-        </li>
-        <li>
-          <a href="#">Add new sales employee</a>
+          <a href="/add-employee">Add new employee</a>
         </li>
         <li>
           <a href="/hr/generate-report">Generate employee report</a>
