--- a/app/views/hr-generate-report.html
+++ b/app/views/hr-generate-report.html
@@ -6,6 +6,10 @@
 
 {% block content %}
 
+  {{ govukBackLink({
+    text: "Back",
+    href: "/hr"
+  }) }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
